# DrawFractal

./: .gitignore  Bitmap.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  README.md  RGB.h  main - Copy.cpp  main.cpp
include/: BitmapFileHeader.h  Zoom.h  ZoomList.h
src/: Bitmap.cpp  FractalCreator.cpp  RGB.cpp  ZoomList.cpp
